# at-ecs

./: Cargo.toml  README.md
src/: lib.rs
src/archetype/: component_vec.rs  mod.rs  raw_alloc.rs
src/query/: has.rs  mod.rs  not.rs  typle.rs
src/system/: configuration.rs  ioc.rs  mod.rs  system.rs  systems_chain.rs  systems_configuration_flow_manager.rs
src/tests/system/: build_world_system_manager_ok.rs  mod.rs  registration_id_dublicate_err.rs  registration_single_ok.rs
src/types/: component_id.rs  mod.rs  signal.rs  system_id.rs
src/world/: mod.rs
