[package]
name = "at-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anthill-di = { git = "https://github.com/Vidrochka/anthill-di.git", branch = "feaure/v2" }
tokio = { version = "^1.37.0", features = ["rt", "macros"] }
uuid = { version = "^1.8.0", features = ["v7"] }
thiserror = "^1.0.58"
anyhow = "^1.0.82"
async-trait = "^0.1.80"
tracing = "^0.1.40"
async-broadcast = "^0.7.0"
async-lock = "^3.3.0"
petgraph = "^0.6.4"
type-uuid = "^0.1.2"

[features]
default = ["anthill-di"]
anthill-di = []